deploy: dbec057363201d6c4aa2e7258cac928e5ebb6a28

--- a/master/keymap.html
+++ b/master/keymap.html
@@ -218,8 +218,8 @@
 <tr><td><code>Alt-`</code></td><td>Set the selected text to upper case</td><td><code>switch_to_uppercase</code></td></tr>
 <tr><td><code>i</code></td><td>Insert before selection</td><td><code>insert_mode</code></td></tr>
 <tr><td><code>a</code></td><td>Insert after selection (append)</td><td><code>append_mode</code></td></tr>
-<tr><td><code>I</code></td><td>Insert at the start of the line</td><td><code>prepend_to_line</code></td></tr>
-<tr><td><code>A</code></td><td>Insert at the end of the line</td><td><code>append_to_line</code></td></tr>
+<tr><td><code>I</code></td><td>Insert at the start of the line</td><td><code>insert_at_line_start</code></td></tr>
+<tr><td><code>A</code></td><td>Insert at the end of the line</td><td><code>insert_at_line_end</code></td></tr>
 <tr><td><code>o</code></td><td>Open new line below selection</td><td><code>open_below</code></td></tr>
 <tr><td><code>O</code></td><td>Open new line above selection</td><td><code>open_above</code></td></tr>
 <tr><td><code>.</code></td><td>Repeat last insert</td><td>N/A</td></tr>
