--- a/master/print.html
+++ b/master/print.html
@@ -970,6 +970,9 @@ hidden = false
 </code></pre>
 <p>You may also specify a file to use for configuration with the <code>-c</code> or
 <code>--config</code> CLI argument: <code>hx -c path/to/custom-config.toml</code>.</p>
+<p>It is also possible to trigger configuration file reloading by sending the <code>USR1</code>
+signal to the helix process, e.g. via <code>pkill -USR1 hx</code>. This is only supported 
+on unix operating systems.</p>
 <h2 id="editor"><a class="header" href="#editor">Editor</a></h2>
 <h3 id="editor-section"><a class="header" href="#editor-section"><code>[editor]</code> Section</a></h3>
 <div class="table-wrapper"><table><thead><tr><th>Key</th><th>Description</th><th>Default</th></tr></thead><tbody>
